# apple-mcp

./: .gitignore  KNOWN_ISSUES.md  pyproject.toml
apple_mcp/: applescript.py  contacts.py  notes.py  reminders.py  server.py
tests/: test_pure.py  test_smoke.py
