[project]
name = "apple-mcp"
version = "0.1.0"
description = "Apple MCP server — Notes, Contacts, Reminders via AppleScript + PyObjC"
authors = [{ name = "Jian Liu" }]
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }

dependencies = [
    "mcp[cli]>=1.9.0",
    "pyobjc-core>=11.0",
    "pyobjc-framework-Cocoa>=11.0",
    "pyobjc-framework-Contacts>=12.1",
    "phonenumbers>=8.13",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pyright>=1.1.351",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
apple-mcp = "apple_mcp.server:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "N", "SIM"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM102", # nested ifs sometimes clearer
    "SIM108", # ternary preference
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["apple_mcp/**/*.py"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportAttributeAccessIssue = false  # pyobjc-framework-Contacts has no type stubs
